# bm_model_library

./: .gitignore  CMakeLists.txt  README.md  gen_model.sh  main.cpp  main.cpp.bkp  models.yaml  test.cpp  test_callup_smoke.cpp  test_face_attr.cpp  test_person_wander.cpp  test_video_track.cpp
include/: model_func.hpp  model_params.hpp  resnet.hpp  resnet_nc.hpp  yolov8_det.hpp
include/bytetrack/: bytetrack.h  draw_utils.hpp  yolov5.hpp
include/models/: pose_pointnet.hpp  resnet.hpp  resnet_nc.hpp  yolov8_det.hpp  yolov8_obb.hpp  yolov8_pose.hpp
include/utils/: bmnn_utils.h
include/yaml-cpp/: emitter.h
include/yaml-cpp/node/: convert.h
src/: CMakeLists.txt
src/bytetrack/: bytetrack.cpp  kalmanfilter.cpp  track_person.cpp
src/classify/: call_up.cpp  cls_resnet.cpp  face_attr.cpp  pose_pointnet.cpp  pose_posture.cpp  rec_action_climb.cpp  rec_action_fall.cpp  rec_action_fight.cpp  rec_hand.cpp  rec_kx_orient.cpp  rec_ren.cpp  resnet.cpp  resnet_nc.cpp
src/ppocr/: ppocr_det.cpp  ppocr_det_rec.cpp  ppocr_rec.cpp
src/utils/: ff_decode.cpp
src/yolo_det/: det_coco.cpp  det_gzwp_atm.cpp  det_hand.cpp  det_header.cpp  det_kx.cpp  det_money.cpp  det_person.cpp  det_screen.cpp  yolov8_det.cpp
src/yolo_obb/: det_stick.cpp  yolov8_obb.cpp
src/yolo_pose/: pose_kx_hp.cpp  pose_kx_sz.cpp  pose_ren.cpp  yolov8_pose.cpp
